force-app/main/default/objects/OpportunityLineItem/fields/Ship_To_Score__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Score__c</fullName>
    <formula>Opportunity.CPQ2_STS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship-To Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>