force-app/main/default/objects/OpportunityLineItem/fields/Ship_To_Score_on_Locked_Date__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Score_on_Locked_Date__c</fullName>
    <label>Ship-To Score on Locked Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>