force-app/main/default/objects/OpportunityLineItem/fields/Site_Survey__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey__c</fullName>
    <formula>Opportunity.Site_Survey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Survey</label>
    <type>Text</type>
</CustomField>