force-app/main/default/objects/OpportunityLineItem/fields/SurveyAssetCountChecker__c.field-meta.xml
<CustomField>
    <fullName>SurveyAssetCountChecker__c</fullName>
    <label>SurveyAssetCountChecker</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>