force-app/main/default/objects/OpportunityLineItem/fields/Total_Unit_Price_without_Install__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Price_without_Install__c</fullName>
    <description>This field is used in the conga templates and calculates Quantity * Unit Price without Install</description>
    <formula>Quantity * Unit_Price_without_Install__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unit Price without Install</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>