force-app/main/default/objects/OpportunityLineItem/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>10L</fullName>
            </value>
            <value>
                <fullName>10PK</fullName>
            </value>
            <value>
                <fullName>12PK</fullName>
            </value>
            <value>
                <fullName>1M</fullName>
            </value>
            <value>
                <fullName>20L</fullName>
            </value>
            <value>
                <fullName>2PK</fullName>
            </value>
            <value>
                <fullName>3.25kg</fullName>
            </value>
            <value>
                <fullName>3kg</fullName>
            </value>
            <value>
                <fullName>4L</fullName>
            </value>
            <value>
                <fullName>5L</fullName>
            </value>
            <value>
                <fullName>BAG</fullName>
            </value>
            <value>
                <fullName>BAG/12</fullName>
            </value>
            <value>
                <fullName>BAG1</fullName>
            </value>
            <value>
                <fullName>BAG12</fullName>
            </value>
            <value>
                <fullName>BAG6</fullName>
            </value>
            <value>
                <fullName>BG18</fullName>
            </value>
            <value>
                <fullName>BOX</fullName>
            </value>
            <value>
                <fullName>BOX/5LB</fullName>
            </value>
            <value>
                <fullName>BOX10</fullName>
            </value>
            <value>
                <fullName>BOX100</fullName>
            </value>
            <value>
                <fullName>BOX12</fullName>
            </value>
            <value>
                <fullName>BOX144</fullName>
            </value>
            <value>
                <fullName>BOX200</fullName>
            </value>
            <value>
                <fullName>BOX24</fullName>
            </value>
            <value>
                <fullName>BOX300</fullName>
            </value>
            <value>
                <fullName>BOX32</fullName>
            </value>
            <value>
                <fullName>BOX36</fullName>
            </value>
            <value>
                <fullName>BOX48</fullName>
            </value>
            <value>
                <fullName>BOX50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>