force-app/main/default/objects/OpportunityLineItem/validationRules/Areas_of_Coverage_Other_Applicable.validationRule-meta.xml
<ValidationRule>
    <fullName>Areas_of_Coverage_Other_Applicable</fullName>
    <active>true</active>
    <description>Areas of Coverage Other is only applicable and required if Areas of Coverage includes Other</description>
    <errorConditionFormula>AND(
INCLUDES(Areas_of_Coverage__c, &apos;Other&apos;),
ISBLANK(Areas_of_Coverage_Other__c)
)
||
AND(
NOT(INCLUDES(Areas_of_Coverage__c, &apos;Other&apos;)),
NOT(ISBLANK(Areas_of_Coverage_Other__c))
)</errorConditionFormula>
    <errorMessage>Areas of Coverage Other is only applicable and required if Areas of Coverage includes Other</errorMessage>
</ValidationRule>