force-app/main/default/objects/OpportunityLineItem/validationRules/Cant_Have_Service_and_Purchase_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Have_Service_and_Purchase_Price</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  
OR(ISCHANGED( Service_Price_Per_Unit__c ),ISCHANGED(  Purchase_Price__c ),ISNEW()),  
AND (NOT( ISBLANK(Service_Price_Per_Unit__c ) ),  NOT( ISBLANK(Purchase_Price__c ) ) ))</errorConditionFormula>
    <errorMessage>You can only have either Service or Purchase Price</errorMessage>
</ValidationRule>