force-app/main/default/objects/OpportunityLineItem/validationRules/Covered_Pests_Other_Applicable.validationRule-meta.xml
<ValidationRule>
    <fullName>Covered_Pests_Other_Applicable</fullName>
    <active>true</active>
    <description>Covered Pests Other is required if Covered Pests includes Other.</description>
    <errorConditionFormula>AND(
INCLUDES(Covered_Pests__c, &apos;Other&apos;),
ISBLANK(Covered_Pests_Other__c)
)
||
AND(
NOT(INCLUDES(Covered_Pests__c, &apos;Other&apos;)),
NOT(ISBLANK(Covered_Pests_Other__c))
)</errorConditionFormula>
    <errorMessage>Covered Pests Other is required if Covered Pests includes Other.</errorMessage>
</ValidationRule>