force-app/main/default/objects/OpportunityLineItem/validationRules/CPQ2_Related_Product_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CPQ2_Related_Product_Required</fullName>
    <active>true</active>
    <description>This check&apos;s if the Product.CPQ2_Related_Product_Required__c is checked. If it is, then a related Product is required to save the record.</description>
    <errorConditionFormula>AND(Product2.CPQ2_Related_Product_Required__c, ISBLANK( Related_Product__c))</errorConditionFormula>
    <errorMessage>You must select a related product in order to save this Opportunity Line Item.</errorMessage>
</ValidationRule>