force-app/main/default/objects/OpportunityLineItem/validationRules/CPQ_Lock_Overrides_After_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>CPQ_Lock_Overrides_After_Lock</fullName>
    <active>true</active>
    <errorConditionFormula>IF( NOT(ISBLANK(CPQ_Locked_Commission_Date__c)) &amp;&amp; ( 
ISCHANGED( CPQ_Commission_Override_Frequency__c ) || 
ISCHANGED( CPQ_Commission_Override_Quantity__c ) || 
ISCHANGED( CPQ_Commission_Override_Service_Price__c ) ||
ISCHANGED( CPQ_Commission_Multiplier__c ) ||
ISCHANGED(  CPQ_Commission_Status__c  )
 ), true, false)</errorConditionFormula>
    <errorMessage>Overrides cannot be updated after the Commission Status has been set to &apos;Locked&apos;</errorMessage>
</ValidationRule>