force-app/main/default/objects/OpportunityLineItem/validationRules/CPQ_Validate_Commission_Multiplier.validationRule-meta.xml
<ValidationRule>
    <fullName>CPQ_Validate_Commission_Multiplier</fullName>
    <active>true</active>
    <errorConditionFormula>IF( CPQ_Commission_Multiplier__c &lt; 0 ||  CPQ_Commission_Multiplier__c &gt; 10, true, false)</errorConditionFormula>
    <errorDisplayField>CPQ_Commission_Multiplier__c</errorDisplayField>
    <errorMessage>Commission Multiplier must be a value between 0 and 10</errorMessage>
</ValidationRule>