force-app/main/default/objects/OpportunityLineItem/validationRules/Lock_Opportunity_Product_at_Signed.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Opportunity_Product_at_Signed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Opportunity.StageName, &apos;Signed&apos;),
    AND($Profile.Name &lt;&gt; &apos;System Administrator&apos;,
       $Profile.Name &lt;&gt; &apos;Sales Operations&apos;,
       $Profile.Name &lt;&gt; &apos;Sales VP&apos;))</errorConditionFormula>
    <errorMessage>The Opportunity is at &apos;Signed.&apos; No change is allowed.</errorMessage>
</ValidationRule>