force-app/main/default/objects/OpportunityLineItem/validationRules/Service_Frequency_56_days.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Frequency_56_days</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Service_Frequency__c, &apos;56 Days&apos;),
    OR(UPPER(Opportunity.Account.ShippingState) != &apos;ON&apos;,
       AND(LEN(Opportunity.Account.ShippingState) &gt; 2,
           UPPER(Opportunity.Account.ShippingState) != &apos;ONTARIO&apos;)),
    Opportunity.Account.Service_Territory__r.Include_In_Integration__c = True
   )</errorConditionFormula>
    <errorDisplayField>Service_Frequency__c</errorDisplayField>
    <errorMessage>The product frequency is not sold in this customer region (confirm with business)</errorMessage>
</ValidationRule>