force-app/main/default/objects/OpportunityLineItem/validationRules/Whole_Quantity_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Whole_Quantity_Only</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
MCEILING(Quantity) &lt;&gt; Quantity, 
Quantity&lt;=0 
)</errorConditionFormula>
    <errorMessage>Quantity must be a positive value and a whole number.</errorMessage>
</ValidationRule>